--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
-  "name": "javascript-action",
+  "name": "hava-plugin-github-action",
   "version": "1.0.0",
+  "private": true,
   "description": "JavaScript Action Template",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
+    "build": "tsc",
+    "format": "prettier --write '**/*.ts'",
+    "format-check": "prettier --check '**/*.ts'",
+    "lint": "eslint src/**/*.ts",
+    "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
+    "all": "npm run lint && npm run format && npm run test && npm run build && npm run package"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/teamhava/hava-plugin-github-action.git"
   },
   "keywords": [
-    "GitHub",
-    "Actions",
-    "JavaScript"
+    "Hava",
+    "Sync",
+    "Documentation"
   ],
-  "author": "",
+  "author": "Hava",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/actions/javascript-action/issues"
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1.2.5",
+    "@actions/http-client": "^2.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.7.6",
+    "@typescript-eslint/parser": "^5.33.1",
     "@vercel/ncc": "^0.31.1",
+    "dotenv": "^16.0.1",
     "eslint": "^8.0.0",
-    "jest": "^27.2.5"
+    "eslint-plugin-github": "^4.3.7",
+    "eslint-plugin-jest": "^26.8.3",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.7.4"
   }
 }
