--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
+    "prepare": "ncc build --source-map --license licenses.txt",
     "test": "jest",
     "all": "npm run lint && npm run format && npm run test && npm run build && npm run package"
   },
