--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 16.x
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Rebuild the dist/ directory
         run: |
