--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Rebuild the dist/ directory
         run: |
           npm run build
-          npm run prepare
+          npm run package
 
       - name: Compare the expected and actual dist/ directories
         run: |
