--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ./
       with:
-        milliseconds: 1000
+        source_id: ${{ secrets.HAVA_SOURCE_ID }}
+        hava_token: ${{ secrets.HAVA_API_TOKEN }}
+        environment_id: ${{ secrets.HAVA_ENV_ID }}
+        view_type: "infrastructure"
+        image_path: "doco/diagram.png"
+        skip_export: false
